--- a/airbnb/default.css
+++ b/airbnb/default.css
@@ -2,10 +2,21 @@ body {
   background-color: white;
 }
 
+button {
+  cursor: pointer;
+}
+
 .mt-sm {
   margin-top: 25px;
 }
 
 .mt-lg {
   margin-top: 50px;
+}
+
+.heading {
+  font-size: 2rem;
+  line-height: 2.5rem;
+  color: black;
+  font-weight: 900;
 }
