--- a/airbnb/style.css
+++ b/airbnb/style.css
@@ -3,14 +3,22 @@
   width: 80%;
   max-width: 1920px;
   margin: 0 auto;
-  border: 1px solid black;
+  overflow: hidden;
 }
-
-header {
+.black-bg {
   background-color: black;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  height: 1000px;
+  z-index: 1;
+}
+header {
   text-align: center;
   padding-top: 20px;
   color: white;
+  position: relative;
+  z-index: 10;
 }
 
 header a {
@@ -166,4 +174,211 @@ header .gnb .search .searchUl li span {
   color: gray;
   font-size: 12px;
   font-weight: normal;
+}
+
+/* notice */
+.notice {
+  background-color: #ff385c;
+  border-radius: 14px;
+  text-align: center;
+  height: 320px;
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+}
+
+.notice p {
+  font-size: 1.5rem;
+  color: white;
+  font-weight: bold;
+  line-height: 1.8rem;
+  margin-bottom: 2rem;
+}
+
+.notice button {
+  border: 1px solid white;
+  padding: 5px 15px;
+  color: white;
+  background-color: inherit;
+  font-weight: bold;
+  border-radius: 14px;
+}
+
+.mainBanner {
+  height: 600px;
+  border-radius: 14px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  padding-bottom: 50px;
+
+  background-image: url("/img/pic1.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  position: relative;
+  z-index: 10;
+}
+
+.mainBanner .content {
+  color: white;
+  text-align: center;
+}
+
+.mainBanner .content p {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 2rem;
+}
+
+.mainBanner .content button {
+  border: 1px solid white;
+  padding: 10px 20px;
+  font-size: 1.2rem;
+  background-color: white;
+  font-weight: bold;
+  border-radius: 24px;
+}
+
+.mainBanner .content button span {
+  background: linear-gradient(90deg, #6f019c 0%, #c6017e 135.12%);
+  -webkit-background-clip: -webkit-text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* idea */
+.city {
+  display: flex;
+  width: 100%;
+  overflow: auto;
+}
+
+.city .card {
+  width: 25%;
+  min-width: 250px;
+  margin-right: 30px;
+  cursor: pointer;
+}
+
+.city .card:nth-last-of-type() {
+  margin-right: 0px;
+}
+
+.city .card img {
+  width: 100%;
+  height: 150px;
+  display: block;
+  border-radius: 15px 15px 0px 0px;
+}
+
+.city .card figcaption {
+  border-radius: 0px 0px 15px 15px;
+  height: calc(150px - calc(24px * 2));
+  padding: 24px 16px;
+  color: white;
+}
+
+.city .card figcaption p {
+  font-size: 2rem;
+  line-height: 3rem;
+  font-weight: bold;
+}
+
+.city .card figcaption span {
+  font-size: 1rem;
+}
+
+/* expression */
+.expression {
+  display: grid;
+  grid-template-rows: auto auto;
+  grid-template-columns: 1fr 1fr;
+  gap: 25px;
+  grid-template-areas:
+    "heading heading"
+    "div1 div2";
+  margin-bottom: 50px;
+}
+
+.expression .heading {
+  grid-area: heading;
+}
+.expression .photoDiv {
+  /* height: calc(700px - calc(60px * 2)); */
+  height: 600px;
+  padding: 60px;
+  border-radius: 14px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.expression .photoDiv:first-of-type {
+  grid-area: div1;
+  background-image: url(/img/ex1.webp);
+}
+
+.expression .photoDiv:last-of-type {
+  grid-area: div2;
+  background-image: url(/img/ex2.webp);
+}
+
+.expression .photoDiv p {
+  color: white;
+  font-size: 2.5rem;
+  font-weight: bold;
+  line-height: 3rem;
+}
+
+.expression .photoDiv button {
+  color: black;
+  font-weight: bold;
+  border: none;
+  background-color: white;
+  padding: 15px 23px;
+  border-radius: 10px;
+  margin-top: 1rem;
+}
+
+.expression .photoDiv button:hover {
+  background-color: lightgray;
+}
+
+@media screen and (max-width: 767px) {
+  .wrap {
+    width: 90%;
+  }
+  .city {
+    scrollbar-width: none;
+  }
+
+  .city::-webkit-scrollbar {
+    display: none;
+  }
+
+  .city .card {
+    margin-right: 15px;
+  }
+
+  .city .card figcaption p {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .expression {
+    grid-template-rows: auto auto auto;
+    grid-template-columns: 1fr;
+    gap: 15px;
+    grid-template-areas:
+      "heading"
+      "div1"
+      "div2";
+  }
 }
