--- a/naver_clone/assets/scss/base/_preset.scss
+++ b/naver_clone/assets/scss/base/_preset.scss
@@ -1,8 +1,17 @@
 .screen-out {
-    position: absolute;
-    width: 0;
-    height: 0;
-    line-height: 0;
-    overflow: hidden;
-    text-indent: -9999px;
+  position: absolute;
+  width: 0;
+  height: 0;
+  line-height: 0;
+  overflow: hidden;
+  text-indent: -9999px;
+}
+
+.scroll-x {
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
